# jfjzsxh-weibogroup

./: .gitignore  API.md  ARCHITECTURE.md  README.md  crawl.py  file_5303944857256012.txt  pyproject.toml  run.bat  server.py
docs/superpowers/plans/: 2026-06-19-media-inline-display.md
docs/superpowers/specs/: 2026-06-19-media-inline-display-design.md  2026-06-19-weibo-im-message-viewer-design.md  2026-06-20-frontend-ux-fixes-design.md
tests/: conftest.py  test_cookie_expiry.py  test_server.py
web/: app.js  index.html  style.css
weibo_im/: __init__.py  crawler.py  db.py  links.py  media.py  parser.py  types.py
